force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/leaseworks__Aircraft_Depreciation_Schedule__c.object-meta.xml
<CustomObject>
    <label>Depreciation Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depreciation Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>