force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Capitalized_Costs_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Capitalized_Costs_Depreciation__c</fullName>
    <label>Capitalized Costs Depreciation</label>
    <summarizedField>leaseworks__Equipment_Depreciation_Schedule__c.leaseworks__Depreciation__c</summarizedField>
    <summaryForeignKey>leaseworks__Equipment_Depreciation_Schedule__c.leaseworks__Aircraft_Depreciation_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>