force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Period_Sequence__c</fullName>
    <label>Period Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>