force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Statutory_Depr_to_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Statutory_Depr_to_Date__c</fullName>
    <label>Statutory Depreciation To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>