force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Statutory_Depreciation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Statutory_Depreciation_Percentage__c</fullName>
    <label>_Statutory Depreciation Perc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>