force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Statutory_Value_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Statutory_Value_F__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Statutory_Value__c</formula>
    <label>Starting Statutory Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>