force-app/main/default/objects/leaseworks__Aircraft_Depreciation_Schedule__c/fields/leaseworks__Tax_Salvage_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Salvage_Value__c</fullName>
    <label>_Tax Carrying Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>